# rfc-chronicle

./: .gitignore  README.md  pyproject.toml
.rfc_data/: pins.json  pins.json.bak
data/: .gitignore
docker/: .dockerignore  .env   Dockerfile  Dockerfile.backend  Dockerfile.frontend  backend.Dockerfile  docker-compose.yml  nginx.conf
docs/: README.md  README02.md  function.md  help.md  interactive-shell.md  milestone00.md  milestone01-tests.md  milestone02.md  milestone03.md  milestone04.md  milestone06.md  milestone07.md  milestone08.md  milestone11.md  oauth-example.md
scripts/: analyze_embeddings.py  build_embeddings.py  build_faiss_index.py  download_all.sh  download_range.sh  make_metadata_summary.py  semsearch.py  test_download.sh
src/api/: main.py  schemas.py
src/data/: fulltext.db
src/rfc_chronicle/: build_faiss.py  cli.py  fetch_rfc.py  formatters.py  fulltext.py  index_fulltext.py  models.py  pin.py  search.py  semsearch.py  shell.py  show.py  utils.py
tests/: test_build_faiss_index.py  test_cli.py  test_cli_fetch.py  test_cli_show.py  test_fetch_rfc.py  test_fetch_rfc_details.py  test_index_fulltext.py  test_pins.py  test_search.py  test_utils.py
web-ui/: index.html  manifest.json
web-ui/css/: styles.css
