[tool.poetry]
name = "rfc-chronicle"           # パッケージ名（必須）
version = "0.1.0"                # バージョン（必須）
description = "CLI-based RFC metadata management tool"
authors = ["あなたの名前 <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
requests = "^2.31"
beautifulsoup4 = "^4.12"
faiss-cpu = "^1.11.0"

[tool.poetry.dev-dependencies]
# テストなど開発用依存を追加したい場合
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
